<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        app:errorEnabled="true">
        <com.scottyab.showhidepasswordedittext.ShowHidePasswordEditText
            android:id="@+id/ed_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/txt_email"/>
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/til_email"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        app:errorEnabled="true"
        app:passwordToggleEnabled="true">
        <com.scottyab.showhidepasswordedittext.ShowHidePasswordEditText
            android:id="@+id/ed_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/txt_matkhau"
            app:tint_color="@color/colorWhite"
            app:drawable_show="@drawable/ic_password_toggle_checked"
            app:drawable_hide="@drawable/ic_password_toggle_normal"/>
    </android.support.design.widget.TextInputLayout>
    <TextView
        android:id="@+id/tv_quen_matkhau"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_quenmatkhau"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/til_password"
        android:textSize="20sp"
        android:layout_marginTop="15dp"
        android:textColor="@color/colorOrange"/>
    <TextView
        android:id="@+id/btn_dangnhap"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/colorWhite"
        android:background="@drawable/bg_button_login"
        android:text="@string/txt_dangnhap"
        android:gravity="center"
        android:padding="10dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_quen_matkhau"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:textSize="18sp"/>
    <LinearLayout
        android:id="@+id/ll_hoacdangnhap"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_dangnhap"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp">
        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1"
            android:background="@drawable/bg_line"
            android:layout_gravity="center"
            android:layout_marginRight="3dp"/>
        <TextView
            android:id="@+id/tv_hoacdangnhap"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_hoacdangnhap"
            android:textSize="15sp"/>
        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1"
            android:background="@drawable/bg_line"
            android:layout_gravity="center"
            android:layout_marginLeft="3dp"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/ll_social_network"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/ll_hoacdangnhap"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="10dp">
        <RelativeLayout
            android:id="@+id/btn_login_facebook"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/bg_button_facebook"
            android:padding="5dp"
            android:layout_marginLeft="10dp">
            <ImageView
                android:id="@+id/img_logo_facebook"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/ic_login_fb"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_facebook"
                android:textColor="@color/colorWhite"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@+id/img_logo_facebook"
                android:layout_marginLeft="10dp"/>
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/btn_login_google"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/bg_button_google"
            android:padding="5dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp">
            <ImageView
                android:id="@+id/img_logo_google"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/ic_login_google_plus"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_google"
                android:textColor="@color/colorWhite"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@+id/img_logo_google"
                android:layout_marginLeft="10dp"/>
        </RelativeLayout>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>