<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <android.support.design.widget.TextInputLayout
                android:id="@+id/til_hoten"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                app:errorEnabled="true">
                <com.scottyab.showhidepasswordedittext.ShowHidePasswordEditText
                    android:id="@+id/ed_hoten"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/txt_hoten_daydu"/>
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:id="@+id/til_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/til_hoten"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                app:errorEnabled="true"
                app:passwordToggleEnabled="true">
                <com.scottyab.showhidepasswordedittext.ShowHidePasswordEditText
                    android:id="@+id/ed_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/txt_email"
                    app:tint_color="@color/colorWhite"
                    app:drawable_show="@drawable/ic_password_toggle_checked"
                    app:drawable_hide="@drawable/ic_password_toggle_normal"/>
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:id="@+id/til_matkhau"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/til_email"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                app:errorEnabled="true"
                app:passwordToggleEnabled="true">
                <com.scottyab.showhidepasswordedittext.ShowHidePasswordEditText
                    android:id="@+id/ed_matkhau"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/txt_matkhau"
                    app:tint_color="@color/colorWhite"
                    app:drawable_show="@drawable/ic_password_toggle_checked"
                    app:drawable_hide="@drawable/ic_password_toggle_normal"/>
            </android.support.design.widget.TextInputLayout>
            <TextView
                android:id="@+id/tv_thongbao"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txt_valid_matkhau"
                android:gravity="center"
                app:layout_constraintTop_toBottomOf="@id/til_matkhau"
                android:textSize="15sp"
                android:layout_marginTop="5dp"/>
            <android.support.design.widget.TextInputLayout
                android:id="@+id/til_nhaplai_matkhau"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_thongbao"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                app:errorEnabled="true"
                app:passwordToggleEnabled="true">
                <com.scottyab.showhidepasswordedittext.ShowHidePasswordEditText
                    android:id="@+id/ed_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/txt_nhaplai_matkhau"
                    app:tint_color="@color/colorWhite"
                    app:drawable_show="@drawable/ic_password_toggle_checked"
                    app:drawable_hide="@drawable/ic_password_toggle_normal"/>
            </android.support.design.widget.TextInputLayout>
            <Switch
                android:id="@+id/sw_nhanthongbao"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/til_nhaplai_matkhau"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:enabled="true"
                android:text="@string/txt_nhankhuyenmai"
                android:paddingRight="10dp"/>
            <TextView
                android:id="@+id/tv_khuyencao"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/sw_nhanthongbao"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:text="@string/txt_toidadoc"
                android:textSize="16sp"/>
            <TextView
                android:id="@+id/btn_dangky"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorWhite"
                android:background="@drawable/bg_button_login"
                android:text="@string/txt_dangky"
                android:gravity="center"
                android:padding="10dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_khuyencao"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:textSize="18sp"/>

            <LinearLayout
                android:id="@+id/ll_hoacdangky"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginTop="5dp"
                android:orientation="horizontal"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btn_dangky">

                <View
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_gravity="center"
                    android:layout_marginRight="3dp"
                    android:layout_weight="1"
                    android:background="@drawable/bg_line" />

                <TextView
                    android:id="@+id/tv_hoacdangky"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_hoacdangky"
                    android:textSize="15sp" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_gravity="center"
                    android:layout_marginLeft="3dp"
                    android:layout_weight="1"
                    android:background="@drawable/bg_line" />
            </LinearLayout>
            <LinearLayout
                android:id="@+id/ll_social_network"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@+id/ll_hoacdangky"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp">
                <RelativeLayout
                    android:id="@+id/btn_dangky_facebook"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/bg_button_facebook"
                    android:padding="5dp"
                    android:layout_marginLeft="10dp">
                    <ImageView
                        android:id="@+id/img_logo_facebook"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:src="@drawable/ic_login_fb"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/txt_facebook"
                        android:textColor="@color/colorWhite"
                        android:layout_centerVertical="true"
                        android:layout_toRightOf="@+id/img_logo_facebook"
                        android:layout_marginLeft="10dp"/>
                </RelativeLayout>
                <RelativeLayout
                    android:id="@+id/btn_dangky_google"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/bg_button_google"
                    android:padding="5dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp">
                    <ImageView
                        android:id="@+id/img_logo_google"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:src="@drawable/ic_login_google_plus"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/txt_google"
                        android:textColor="@color/colorWhite"
                        android:layout_centerVertical="true"
                        android:layout_toRightOf="@+id/img_logo_google"
                        android:layout_marginLeft="10dp"/>
                </RelativeLayout>
            </LinearLayout>
        </android.support.constraint.ConstraintLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>